Correções de diretorio e listagem de filmes

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,11 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Oswald:400,500,600,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Merriweather:400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700&display=swap"
       rel="stylesheet"
     />
     <title>inFilmes</title>
