Correção de layout e listagem principal

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       href="%PUBLIC_URL%/icons/apple-touch-icon-180x180.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0359a6" />
+    <meta name="theme-color" content="#2b2b2b" />
     <meta
       name="description"
       content="Web site created using create-react-app"
